--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -16,5 +16,5 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 # on and off. This also causes the display to turn off.
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-$ This line for enable mouse emulator at build
+# This line for enable mouse emulator at build
 CONFIG_ZMK_POINTING=y
